--- a/test.html
+++ b/test.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ヘッダー／フッターテストページ</title>
+  <title>ヘッダー／フッターテストページ（final）</title>
   <style>
     body {
       margin: 0;
@@ -26,12 +26,12 @@
 
   <main>
     <h1>テストページ</h1>
-    <p>ここがメインコンテンツです。Supabaseのヘッダー／フッターが正しく反映されるか確認してください。</p>
+    <p>ここがメインコンテンツです。管理ページで保存したヘッダー／フッターが正しく反映されるか確認してください。</p>
   </main>
 
   <footer id="site-footer"></footer>
 
-  <!-- 修正版 hf.js を読み込み -->
-  <script type="module" src="hf_fixed.js.txt"></script>
+  <!-- 最終版 hf.js を読み込み -->
+  <script type="module" src="hf-final.js.txt"></script>
 </body>
 </html>
