--- a/test.html
+++ b/test.html
@@ -32,6 +32,6 @@
   <footer id="site-footer"></footer>
 
   <!-- 最終版 hf.js を読み込み -->
-  <script type="module" src="hf-final.js.txt"></script>
+  <script type="module" src="hf.js"></script>
 </body>
 </html>
