--- a/test.html
+++ b/test.html
@@ -128,7 +128,7 @@
 
       <!-- 最終更新日（ダミー） -->
       <div class="mt-10 pt-4 border-t border-gray-200 text-sm text-gray-500 text-right">
-        制定日：2023年10月2日
+        合同会社WaJu
       </div>
 
     </div>
