--- a/test.html
+++ b/test.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ページタイトル | 合同会社WaJu</title>
+  <title>プライバシーポリシー | 合同会社WaJu</title>
 
   <!-- SEO / OGP -->
-  <meta name="description" content="ここにページごとの説明を記載します。">
-  <meta property="og:title" content="ページタイトル | 合同会社WaJu">
-  <meta property="og:description" content="ここにページごとの説明を記載します。">
+  <meta name="description" content="合同会社WaJuのプライバシーポリシー。個人情報の管理・利用目的・第三者提供・安全対策・法令遵守について記載しています。">
+  <meta property="og:title" content="プライバシーポリシー | 合同会社WaJu">
+  <meta property="og:description" content="合同会社WaJuのプライバシーポリシー。個人情報の管理・利用目的・第三者提供・安全対策・法令遵守について記載しています。">
   <meta property="og:image" content="https://htnmjsqgoapvuanrsuma.supabase.co/storage/v1/object/public/assets/wjhp0001.png">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://waju.co.jp/">
+  <meta property="og:url" content="https://waju.co.jp/privacy.html">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" sizes="32x32" href="https://htnmjsqgoapvuanrsuma.supabase.co/storage/v1/object/public/assets/favicon-32x32.png">
@@ -43,25 +43,99 @@
       padding: 2em;
       min-height: 60vh;
     }
-    /* 固定フッター用クラスが付与された場合にmainに余白を確保 */
     body.footer-fixed main {
-      padding-bottom: 80px; /* ← フッターの高さに合わせる */
+      padding-bottom: 80px;
+    }
+    /* プライバシーポリシー用装飾 */
+    #page-content .container {
+      max-width: 900px;
+      margin: 40px auto;
+      padding: 0 20px;
+    }
+    .privacy-content { line-height: 1.8; color: #333; font-size: 16px; }
+    .privacy-content h1 {
+      margin: 0 0 40px;
+      padding-bottom: 10px;
+      font-size: 2.5rem;
+      font-weight: 700;
+      text-align: center;
+      color: #0f172a;
+      border-bottom: 2px solid #e0e0e0;
+    }
+    .privacy-content h2 {
+      margin: 40px 0 16px;
+      font-size: 1.5rem;
+      font-weight: 600;
+      color: #1976d2;
+      padding-bottom: 5px;
+      border-bottom: 1px dashed #bbdefb;
+    }
+    .privacy-content p {
+      margin: 0 0 24px;
+      text-align: justify;
+    }
+    .privacy-content ul { margin: 0 0 24px 20px; padding-left: 0; list-style-type: none; }
+    .privacy-content ul li { position: relative; padding-left: 20px; margin-bottom: 8px; }
+    .privacy-content ul li::before {
+      content: '・';
+      color: #1976d2;
+      position: absolute; left: 0; top: 0; font-weight: bold;
+    }
+    .signature {
+      margin-top: 50px;
+      padding-top: 15px;
+      text-align: right;
+      font-weight: 700;
+      font-size: 1.1rem;
+      color: #555;
+      border-top: 1px solid #e0e0e0;
+    }
+    @media (max-width: 768px) {
+      .privacy-content h1 { font-size: 2rem; margin-bottom: 30px; }
+      .privacy-content h2 { font-size: 1.3rem; margin-top: 30px; }
     }
   </style>
 </head>
 <body id="page-body">
   <header id="site-header"></header>
 
-  <main id="page-main">
-    <!-- ▼ ページごとのメインコンテンツはこの範囲に記述 ▼ -->
-    <h1>仮タイトル</h1>
-    <p>この部分を各ページで編集します。</p>
-    <!-- ▲ ページごとのメインコンテンツはこの範囲に記述 ▲ -->
+  <main id="page-content" aria-live="polite">
+    <div class="container">
+      <div class="privacy-content">
+        <h1>プライバシーポリシー</h1>
+
+        <p>合同会社WaJu（以下「当社」）は、個人情報保護の重要性を深く認識し、以下の方針に基づき個人情報の適切な取り扱いと保護に努めます。</p>
+
+        <h2>個人情報の管理</h2>
+        <p>当社は、お客様の個人情報を正確かつ最新の状態に保ち、不正アクセス・紛失・破損・改ざん・漏洩等を防止するため、セキュリティシステムの維持、管理体制の整備、社員教育の徹底を実施します。</p>
+
+        <h2>個人情報の利用目的</h2>
+        <p>お預かりした個人情報は、当社からのご連絡、業務のご案内、ご質問への回答、電子メールや資料送付などの目的で利用いたします。</p>
+
+        <h2>個人情報の第三者提供</h2>
+        <p>当社は、以下の場合を除き、お客様の同意なく第三者へ個人情報を開示・提供することはありません。</p>
+        <ul>
+          <li>法令に基づき開示が必要な場合</li>
+          <li>お客様の同意がある場合</li>
+        </ul>
+
+        <h2>安全対策</h2>
+        <p>個人情報の正確性および安全性を確保するために、最新のセキュリティ対策を講じています。</p>
+
+        <h2>ご本人からの照会</h2>
+        <p>お客様がご本人の個人情報の照会・修正・削除を希望される場合は、ご本人確認のうえで適切に対応いたします。</p>
+
+        <h2>法令の遵守と見直し</h2>
+        <p>当社は、適用される日本の法令や規範を遵守するとともに、本ポリシーを適宜見直し、改善に努めます。</p>
+
+        <div class="signature">
+          合同会社WaJu
+        </div>
+      </div>
+    </div>
   </main>
 
   <footer id="site-footer"></footer>
-
-  <!-- ヘッダー／フッター反映 -->
   <script type="module" src="hf.js"></script>
 </body>
 </html>
